convert gitlab blog to github profile readme

--- a/posts/2020-02-27_gitlabci.md
+++ b/posts/2020-02-27_gitlabci.md
@@ -1,7 +1,4 @@
----
-title: Test .gitlab-ci.yml
-date: 2020-02-27
----
+# Test .gitlab-ci.yml
 
 You can find below a simple way to test external GitLab CI/CD setups in a new repository.
 
