--- a/posts/2020-04-11_tags.md
+++ b/posts/2020-04-11_tags.md
@@ -1,20 +1,17 @@
----
-title: File tags
-date: 2020-04-11
----
+# File tags
 
-# Requirements
+## Requirements
 
 * File tagging tool for any file type
 * Usable both from cli and gui: list, add, remove and search tags
 * Tags stored in the files (no external database)
 
-# Links
+## Links
 
 * [What's a good solution for file-tagging in linux?](https://superuser.com/questions/81563/whats-a-good-solution-for-file-tagging-in-linux)
 * [Extended attributes: the good, the not so good, the bad.](https://www.lesbonscomptes.com/pages/extattrs.html)
 
-# Filename tags
+## Filename tags
 
 After discarding a few solutions, I settled for tags in filenames in the following form: `title.tag1.tag2.long_tag.ext`. It's simple, it does not require any specific software and it works with existing tools (e.g. ls, mv, cp, rsync, fd, fzf, file managers).  I also wrote a [script](https://gitlab.com/Obsidienne/dotfiles/-/blob/cdd67a5cfab5ad5446a020578a165efa402c4bf5/user/bin/dottags) to find all the tags used in a directory. This solution has two drawbacks though: it pollutes filenames, and filesystems have a maximum filename length (often 255 bytes).
 
@@ -46,7 +43,7 @@ $ fzf --reverse --multi
   [...]
 ```
 
-# Update 2021/03/16
+## Update 2021/03/16
 
 * modified filename format: `title.+tag1+tag2+long_tag3.ext`
 * `dottags-hash` (old: `dotrename`) replaces a file title with a short hash (default: 7 characters)
