posts: gitlab permalinks -> github permalinks

--- a/posts/2020-04-11_tags.md
+++ b/posts/2020-04-11_tags.md
@@ -13,7 +13,7 @@
 
 ## Filename tags
 
-After discarding a few solutions, I settled for tags in filenames in the following form: `title.tag1.tag2.long_tag.ext`. It's simple, it does not require any specific software and it works with existing tools (e.g. ls, mv, cp, rsync, fd, fzf, file managers).  I also wrote a [script](https://gitlab.com/Obsidienne/dotfiles/-/blob/cdd67a5cfab5ad5446a020578a165efa402c4bf5/user/bin/dottags) to find all the tags used in a directory. This solution has two drawbacks though: it pollutes filenames, and filesystems have a maximum filename length (often 255 bytes).
+After discarding a few solutions, I settled for tags in filenames in the following form: `title.tag1.tag2.long_tag.ext`. It's simple, it does not require any specific software and it works with existing tools (e.g. ls, mv, cp, rsync, fd, fzf, file managers).  I also wrote a [script](https://github.com/obsiwitch/dotfiles/blob/cdd67a5cfab5ad5446a020578a165efa402c4bf5/user/bin/dottags) to find all the tags used in a directory. This solution has two drawbacks though: it pollutes filenames, and filesystems have a maximum filename length (often 255 bytes).
 
 ```sh
 # Example: find all the tags used in a directory
@@ -46,5 +46,23 @@ $ fzf --reverse --multi
 ## Update 2021/03/16
 
 * modified filename format: `title.+tag1+tag2+long_tag3.ext`
-* `dottags-hash` (old: `dotrename`) replaces a file title with a short hash (default: 7 characters)
-* `dottags-count` (old: `dottags`) now works with the new filename format and only displays tags and not other suffixes
+* [dottags-hash](https://github.com/obsiwitch/dotfiles/blob/75c24192c41211340f03fd78e014bad2340c10a1/user/bin/dottags-hash) (old: `dotrename`) replaces a file title with a short hash (default: 7 characters)
+    ```sh
+    $ dottags-hash *
+    * Gilda1 valdis.+valdis_story+gilda+character.webp -> cca4044.+valdis_story+gilda+character.webp
+    * valdisstory_gilda_wallpaper1920x1080.+valdis_story+gilda+character+indoors.jpg -> f917cb4.+valdis_story+gilda+character+indoors.jpg
+    ```
+* [dottags-count](https://github.com/obsiwitch/dotfiles/blob/75c24192c41211340f03fd78e014bad2340c10a1/user/bin/dottags-count) (old: `dottags`) now works with the new filename format and only displays tags and not other suffixes
+    ```sh
+    $ dottags-count *.*
+    # Count tags
+    [...]
+    ramheadedgirl 48
+    scene 49
+    indoors 54
+    pc98 61
+    character 127
+
+    # Missing tags
+    2843cd7.gif
+    ```
