posts:blog: proofread

--- a/posts/2021-10-22_blog.md
+++ b/posts/2021-10-22_blog.md
@@ -1,5 +1,5 @@
-# Static blog generation
+# Blog iterations
 
-* [**750a79c..83fc2a8**] The first iteration was a blog hosted using GitLab Pages. [Pandoc](https://pandoc.org/) was used for converting markdown blog posts to HTML and as a template engine to format pages, add the list of blog posts on the index page and to generate the RSS feed.
-* [**ecf34d1..62c957a**] Then I transferred my repositories to GitHub and used a [profile readme](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme) for the blog. Pandoc was still used at this point as a template engine to add the list of blog posts in the `readme.md` and to generate the RSS feed. I used the ability to directly preview markdown files on GitHub to avoid having to convert them to HTML. I also didn't have to maintain a CSS file anymore.
-* [**83d5c85..[HEAD](https://github.com/obsiwitch/obsiwitch)**] In the current iteration I'm using the repository's commits atom feed instead of generating one myself. I'm also using `envsubst` (`gettext` package) for basic templating instead of `pandoc`.
+* [**750a79c..83fc2a8**] The first iteration was a static blog hosted using GitLab Pages. [Pandoc](https://pandoc.org/) was used for converting markdown blog posts to HTML and as a template engine to format pages, to add the list of blog posts on the index page and to generate a feed.
+* [**ecf34d1..62c957a**] Then I transferred my repositories to GitHub and used a [profile readme](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-github-profile/customizing-your-profile/managing-your-profile-readme) repository for the blog. Pandoc was still used at this point as a template engine to add the list of blog posts in the `readme.md` and to generate the RSS feed. I used the ability to directly preview markdown files on GitHub to avoid having to convert them to HTML. I also didn't have to maintain a CSS file anymore.
+* [**83d5c85..[HEAD](https://github.com/obsiwitch/obsiwitch)**] In the current iteration I'm using the repository's *Recent Commits* atom feed instead of generating one myself. I'm also using `envsubst` (`gettext` package) for basic templating instead of `pandoc`.
