posts:sdmap: fix sdmap repo url

--- a/posts/2022-12-21_sdmap.md
+++ b/posts/2022-12-21_sdmap.md
@@ -2,6 +2,7 @@
 
 The Steam Deck controller can be remapped through Steam, but I wanted a solution that didn't require Steam to be launched all the time and would allow me to switch between a regular gamepad layout and a desktop layout.
 
-First I had to add support for the controller in my kernel by applying the patches present in the SteamOS kernel. I packaged the patched files as a [DKMS module](https://github.com/obsiwitch/dotfiles/tree/2ac2bb8d0bff49cac9b5d80f6b1d7e849707f293/packages/hid-steam-deck-dkms) that didn't require me to recompile my whole kernel. **Update 2023/05/05**: controller support has been added to Linux 6.3, the dkms module isn't needed anymore.
+~~First I had to add support for the controller in my kernel by applying the patches present in the SteamOS kernel. I packaged the patched files as a [DKMS module](https://github.com/obsiwitch/dotfiles/tree/2ac2bb8d0bff49cac9b5d80f6b1d7e849707f293/packages/hid-steam-deck-dkms) that didn't require me to recompile my whole kernel.~~ <br/>
+**Update 2023/05/05**: controller support has been added to Linux 6.3, the dkms module isn't needed anymore.
 
-Then I wrote a [tool](https://github.com/obsiwitch/dotfiles/tree/main/packages/sdmap) to remap the controller events.
+Then I wrote a [tool](https://github.com/obsiwitch/sdmap) to remap the controller events.
